--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,7 +277,7 @@ body
     pointer-events: initial;
 }
 
-form label
+.form_ligne label
 {
     display: block;
     margin-bottom: 4px;
@@ -290,22 +290,22 @@ form label
     transition-duration: .3s;
 }
 
-form label.actif
+.form_ligne label.actif
 {
     color: var(--orange);
     transition-duration: .3s;
 }
 
-form .form_ligne
+.form_ligne
 {
     width: 100%;
     padding-bottom: 32px;
 }
 
-form .form_ligne input[type="text"],
-form .form_ligne input[type="mail"],
-form .form_ligne input[type="password"],
-form .form_ligne textarea
+.form_ligne input[type="text"],
+.form_ligne input[type="mail"],
+.form_ligne input[type="password"],
+.form_ligne textarea
 {
     width: 100%;
     display: block;
@@ -314,24 +314,24 @@ form .form_ligne textarea
     border-radius: 5px;
 }
 
-form .form_ligne select
+.form_ligne select
 {
     padding: 8px;
     border: 1px solid var(--border);
 }
 
-form .form_ligne.cgu 
+.form_ligne.cgu 
 {
     display: flex;
     align-items: baseline;
 }
 
-form .form_ligne.cgu a
+.form_ligne.cgu a
 {
     color: #000;
 }
 
-form .form_ligne.cgu label
+.form_ligne.cgu label
 {
     font-size: 14px;
     margin-left: 8px;
@@ -2111,6 +2111,12 @@ footer .footer_content .footer_content__div .copyright
     height: 50px;
     border-radius: 100%;
     object-fit: cover;
+}
+
+.administration .tbl_contenu .rang
+{
+    font-weight: 700;
+    color: var(--orange);
 }
 
 .administration .tbl_actions
