--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1765,6 +1765,21 @@ footer .footer_content .footer_content__div .copyright
     transition-duration: .3s;
 }
 
+.connectez_vous
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    font-weight: 700;
+}
+
+.connectez_vous a
+{
+    margin-left: 4px;
+    color: var(--links);
+}
+
 /*********************************************************
 
     SUGGERER UNE MODIFICATION
@@ -1993,6 +2008,11 @@ footer .footer_content .footer_content__div .copyright
     margin-top: 16px;
     background: #f5f5f577;
     clear: left;
+}
+
+.administration .filtres
+{
+    padding: 16px;
 }
 
 .administration .tbl_top 
@@ -3186,6 +3206,73 @@ footer .footer_content .footer_content__div .copyright
 
 /*********************************************************
 
+    A PROPOS
+
+*********************************************************/
+
+.a_propos .header
+{
+    color: #000;
+    padding: 64px 16px;
+    text-align: center;
+    background: url('../img/informatique.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.a_propos .contenu
+{
+    width: 50%;
+    padding: 16px;
+    margin: 0 auto;
+}
+
+.a_propos .contenu .bloc
+{
+    padding: 32px 0;
+}
+
+.a_propos .contenu h2
+{
+    font-size: 23px;
+    font-weight: 700;
+    margin: 16px 0;
+}
+
+.a_propos .contenu p
+{
+    font-size: 16px;
+    color: var(--grey);
+    line-height: 2;
+}
+
+.a_propos .contenu br
+{
+    margin-bottom: 25px;
+}
+
+.a_propos .contenu a
+{
+    color: var(--links);
+}
+
+.a_propos .contenu ul
+{
+    color: var(--grey);
+    padding: 8px 0;
+}
+
+.a_propos .contenu ul li
+{
+    margin-left: 32px;
+    list-style-type: circle;
+    padding: 8px 0;
+}
+
+/*********************************************************
+
     PAGE 404 : NOT FOUND
 
 *********************************************************/
@@ -3428,8 +3515,14 @@ footer .footer_content .footer_content__div .copyright
 
     .projet_contenu .projet_actions
     {
-        justify-content: right;
+        display: block;
         width: 100%;
+    }
+
+    .projet_contenu .projet_actions button
+    {
+        border-radius: 0.12em;
+        margin-top: 8px;
     }
 
     .projet_contenu__top .projet_infos
@@ -3543,6 +3636,17 @@ footer .footer_content .footer_content__div .copyright
         width: 90%;
     }
 
+    .reponse_sujet
+    {
+        padding: 24px 0;
+        border-bottom: none;
+    }
+
+    .reponse_sujet:nth-child(odd)
+    {
+        background: var(--border);
+    }
+
     .post_sujet .content,
     .reponse_sujet .content
     {
@@ -3630,6 +3734,11 @@ footer .footer_content .footer_content__div .copyright
     .administration .tbl_contenu input[type="checkbox"]
     {
         display: none;
+    }
+
+    .a_propos .contenu
+    {
+        width: 100%;
     }
 
     .error_content
