--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1847,6 +1847,21 @@ footer .footer_content .footer_content__div .copyright
     transition-duration: .3s;
 }
 
+.div_modifier_reponse
+{
+    display: none;
+}
+
+.div_modifier_reponse .erreur
+{
+    display: none;
+}
+
+.div_modifier_reponse .ligne_button
+{
+    margin-top: 8px;
+}
+
 .connectez_vous
 {
     font-weight: 700;
@@ -2696,6 +2711,37 @@ footer .footer_content .footer_content__div .copyright
 {
     color: var(--grey);
     font-weight: 600;
+}
+
+.liste_signalements
+{
+    padding: 32px 0;
+}
+
+.liste_signalements .signalement
+{
+    padding: 16px 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--border);
+}
+
+.liste_signalements .signalement .motif
+{
+    font-weight: 600;
+}
+
+.liste_signalements .signalement .infos
+{
+    margin-top: 8px;
+    font-size: 12px;
+    color: var(--grey);
+}
+
+.liste_signalements .signalement_contenu
+{
+    display: none;
 }
 
 /*********************************************************
